@@ -67,7 +67,10 @@ int denora_event_globops(char *source, int ac, char **av);
 int denora_event_burst(char *source, int ac, char **av);
 int denora_event_create(char *source, int ac, char **av);
 int denora_event_pong(char *source, int ac, char **av);
-int denora_event_sgline(char *source, int ac, char **av);
+int denora_event_gline(char *source, int ac, char **av);
+int denora_event_shun(char *source, int ac, char **av);
+int denora_event_zline(char *source, int ac, char **av);
+int denora_event_jupe(char *source, int ac, char **av);
 int denora_event_fakehost(char *source, int ac, char **av);
 void IRCDModeInit(void);
 int DenoraInit(int argc, char **argv);
